[package]
name = "bodega_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base64 = "0.13.1"
reqwest = "0.11.13"
serde_json = "1.0.89"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.23"
